--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
 
 
     </section>
+    <section class="dream-big">
+        <div>
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS.
+                I can build any simple website.
+                I can even teach my grandma how to make
+                simple website. My goal is to build 3 websites and learn advanced topics.
+
+            </p>
+        </div>
+
+
+
+    </section>
 </body>
 
 </html>
