--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="flexible-container" class="top-banner">
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Mehnaz Ahmed</span> World</h1>
@@ -21,7 +21,8 @@
             <p>You might saw me jumping, climbing buildings, and stopping trains.
                 But nobody pays me a dime for that work. That's why I am learning and mastering web development.
                 I will not stop until I become the Web Development Hero.</p>
-            <a class="link-button" href="https://www.linkedin.com/company/programminghero/" target="_blank">Hire me</a>
+            <a class="button-color" class="link-button" href="https://www.linkedin.com/company/programminghero/"
+                target="_blank">Hire me</a>
         </div>
         <div class="half-width"><img src="images/jhankar.png" alt=""></div>
 
